# vision

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.ci/: format.py
include/: common.h
include/cifar100/: bin.h  cifar.h  label.h
include/common/: assertion.h  classifier.h  exception.h  file.h  helper.h  matrix.h  struct.h
resource/cifar-100-binary/: .gitattributes  coarse_label_names.txt  fine_label_names.txt
src/cifar100/: bin.cpp  cifar.cpp  label.cpp
src/common/: file.cpp  helper.cpp
test/unittest/: CMakeLists.txt
test/unittest/src/common/: test_cifar.cpp  test_cifar_bin.cpp  test_cifar_label.cpp  test_classfier.cpp  test_matrix.cpp
